--- a/yocto/meta-klipper/recipes-webui/octoprint/files/config.yaml
+++ b/yocto/meta-klipper/recipes-webui/octoprint/files/config.yaml
@@ -5,10 +5,10 @@ serial:
   timeout: {}
 plugins:
   pluginmanager:
-    pip: /usr/bin/pip-sudo
+    pip: /usr/bin/pip
     pip_force_user: true
   softwareupdate:
-    pip_command: /usr/bin/pip-sudo
+    pip_command: /usr/bin/pip
     _config_version: 6
     checks:
       octoprint:
@@ -17,12 +17,14 @@ plugins:
         prerelease_channel: null
     notify_users: false
 server:
+  reverseProxy:
+    prefixHeader: X-Script-Name
   onlineCheck:
     enabled: false
   pluginBlacklist:
     enabled: true
   commands:
-    serverRestartCommand: /etc/init.d/octoprint restart
+    serverRestartCommand: sv restart octoprint
     systemRestartCommand: shutdown -r now
     systemShutdownCommand: shutdown -h now
 system:
