Added cubietruck support
...along with tons of stuff that got accumulated within the last year.

Should have been more disciplined, but somehow did not have time to
properly maintain it beyond "works for me".

--- a/.gitmodules
+++ b/.gitmodules
@@ -13,3 +13,9 @@
 [submodule "yocto/openembedded-core"]
 	path = yocto/openembedded-core
 	url = git://git.openembedded.org/openembedded-core
+[submodule "yocto/meta-sunxi"]
+	path = yocto/meta-sunxi
+	url = https://github.com/linux-sunxi/meta-sunxi
+[submodule "yocto/meta-arm"]
+	path = yocto/meta-arm
+	url = git://git.yoctoproject.org/meta-arm
