--- a/yocto/meta-klipper/conf/site.conf
+++ b/yocto/meta-klipper/conf/site.conf
@@ -9,3 +9,6 @@ VOLATILE_LOG_DIR = "no"
 do_image_complete[deptask] += "do_populate_lic"
 
 BB_NUMBER_PARSE_THREADS ?= "${@min(oe.utils.cpu_count(),3)}"
+
+# util-linux-native fails to find magic.h
+ASSUME_PROVIDED_remove = "file-native"
