--- a/targets/tinker-board-s/conf/bblayers.conf
+++ b/targets/tinker-board-s/conf/bblayers.conf
@@ -8,10 +8,11 @@ BBLAYERS = " \
     ${YOCTO_TOPDIR}/yocto/meta-openembedded/meta-python \
     ${YOCTO_TOPDIR}/yocto/meta-openembedded/meta-perl \
     ${YOCTO_TOPDIR}/yocto/meta-openembedded/meta-networking \
+    ${YOCTO_TOPDIR}/yocto/meta-arm/meta-arm-toolchain \
+    ${YOCTO_TOPDIR}/yocto/meta-arm/meta-arm \
     ${YOCTO_TOPDIR}/yocto/meta-rockchip \
     ${YOCTO_TOPDIR}/yocto/meta-python2 \
     ${YOCTO_TOPDIR}/yocto/meta-klipper \
 "
 
-BBMASK = "${YOCTO_TOPDIR}/yocto/meta-maker/recipes-python/werkzeug \
-          ${YOCTO_TOPDIR}/yocto/meta-maker/recipes-python/jinja2"
+BBMASK = "${YOCTO_TOPDIR}/yocto/meta-klipper/recipes-kernel/linux/linux-mainline_%.bbappend"
